--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 :root{
-     --primary-color:#1d5888;
-     --secondary-color:#ff993b;
+     --primary-color:#000000;
+     --secondary-color:#E03C28;
      --dark-color:#292929;
      --white-color:#e7e7e7;
 }
@@ -11,6 +11,11 @@ body{
 nav{
     background-color: var(--dark-color);
 }
+
+.checkmark{
+    color: var(--secondary-color);
+}
+
 footer{
     background-color: var(--dark-color);
     padding-right: 1rem;
